<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListenSongPause"
    android:background="@color/black"
    >
    <RelativeLayout
        android:id="@+id/header_title"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_tittle"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:paddingVertical="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_artist"
                android:textColor="@color/orange"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/triangle_icon_desc"
            android:src="@drawable/triangle_icon" />
    </RelativeLayout>
    <LinearLayout
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/header_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_menu"
        android:weightSum="1"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_weight=".6"
            android:layout_gravity="center"
            android:id="@+id/artists_icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/artist_icon_desc"
            android:src="@drawable/artist_2" />
        <RelativeLayout
            android:layout_weight=".4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/play_icons_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="40dp"
                    android:layout_toStartOf="@+id/play_icon"
                    android:contentDescription="@string/play_icon"
                    android:scaleType="fitXY"
                    android:src="@drawable/left_icon" />

                <ImageView
                    android:id="@+id/play_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/left_icon"
                    android:src="@drawable/stop_icon" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/play_icon"
                    android:contentDescription="@string/right_icon"
                    android:scaleType="fitXY"
                    android:src="@drawable/right_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@id/play_icons_con"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/status_bar"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/status_bar_desc"
                    android:src="@drawable/status_bar" />
                <TextView
                    android:id="@+id/record_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/status_bar"
                    android:padding="2dp"
                    android:text="@string/time_lapse"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />
            </RelativeLayout>


        </RelativeLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/silver_lite"
        android:paddingVertical="10dp"
        app:itemIconTint="@drawable/state_selector"
        app:itemTextColor="@drawable/state_selector"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_menu"
        android:id="@+id/bottom_menu"
        />
</RelativeLayout>
