<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".uploadMusicActivity"
    >
    <RelativeLayout
        android:paddingHorizontal="20dp"
        android:id="@+id/Add_PlayList"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/menu_icon_desc"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/arrow_back"
            android:text="@string/Upload_music"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:text="@string/next"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/upload_container"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/Add_PlayList"
        android:padding="20sp"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/upload_music_holder"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/round_upload" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/upload_icon_desc"
            android:src="@drawable/upload_icon" />
    </RelativeLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/upload_container"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rectangle_button"
        android:hint="@string/title"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange"
        android:textSize="20sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/title"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_button"
        android:hint="@string/genre"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange"
        android:textSize="20sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/song_desc"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/genre"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_button"
        android:hint="@string/playlist_desc"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange"
        android:textSize="20sp"
        tools:ignore="Autofill" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/song_desc"
        android:layout_above="@id/bottom_menu"
        android:layout_marginHorizontal="20dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/upload_record"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginVertical="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/round_button"
            android:paddingHorizontal="40dp"
            android:text="@string/song_upload"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/record_music"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/upload_record"
            android:background="@color/black"
            android:paddingHorizontal="20dp"
            android:text="@string/song_record"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/silver_lite"
        android:paddingVertical="10dp"
        app:itemIconTint="@drawable/state_selector"
        app:itemTextColor="@drawable/state_selector"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_menu"
        android:id="@+id/bottom_menu"
        />
</RelativeLayout>