<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SigninActivity"
    android:orientation="vertical"
    android:weightSum="1"
    >
    <RelativeLayout
        android:layout_weight=".30"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/sign_up"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up"
            android:layout_alignParentStart="true"
            android:layout_marginVertical="20dp"
            android:contentDescription="@string/app_logo_description"
            android:src="@drawable/logo" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:text="@string/app_named"
            android:textStyle="bold"
            android:layout_marginBottom="25dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_button"
            android:layout_marginBottom="25dp">

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:autofillHints="Email"
                android:background="@color/white"
                android:hint="@string/phone_Number"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/orange"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_button"
            android:layout_marginBottom="25dp">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="70dp"
                android:autofillHints="password"
                android:background="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/orange"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/show"
                android:text="@string/show"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signIn_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:background="@drawable/round_button"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            >

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/forget_password"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>