<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewProfile"
    android:background="@color/black"
    >

    <LinearLayout
        android:id="@+id/viewProfile"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:weightSum="1"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_weight=".8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            >
            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/back_icon"
                android:textAlignment="textStart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/back_icon"
                android:contentDescription="@string/back_icon_desc"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/back_icon"
                android:text="@string/view_profile"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_weight=".2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_alignParentEnd="true"
                android:src="@drawable/edit_icon"
                android:padding="2dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:textAlignment="textEnd"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                android:contentDescription="@string/edit_profile"
                />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:padding="20dp"
        android:layout_below="@id/viewProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_menu"
        android:orientation="vertical"
        android:weightSum="1"
        >
        <RelativeLayout
            android:layout_weight=".5"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/person_icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/person_icon_desc"
                android:src="@drawable/brown_round_background" />
            <TextView
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/person_icon"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/orange"
                android:textSize="24sp"
                android:textStyle="bold"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_weight=".5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/label_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/email"
                android:textColor="@color/orange"
                android:textSize="22sp" />
            <TextView
                android:layout_below="@id/label_email"
                android:id="@+id/label_playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/playlist_count"
                android:textColor="@color/orange"
                android:textSize="22sp" />
            <TextView
                android:layout_below="@id/label_playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/song_count"
                android:textColor="@color/orange"
                android:textSize="22sp" />
        </RelativeLayout>



    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/silver_lite"
        android:paddingVertical="10dp"
        app:itemIconTint="@drawable/state_selector"
        app:itemTextColor="@drawable/state_selector"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_menu"
        android:id="@+id/bottom_menu"
        />
</RelativeLayout>