<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recordingStart"
    android:background="@color/black"
    >
    <RelativeLayout
        android:paddingHorizontal="20dp"
        android:id="@+id/record_music"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_alignParentBottom="true"
            android:id="@+id/arrow_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/menu_icon_desc"
            android:src="@drawable/back_icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/arrow_back"
            android:text="@string/record_music"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_menu"
        android:layout_below="@+id/record_music"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/artists_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/artist_icon_desc"
            android:src="@drawable/artist_2" />

        <TextView
            android:id="@+id/record_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/artists_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/time_record"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/record_time"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/artist_icon_desc"
            android:src="@drawable/start_record_icon" />

    </RelativeLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/silver_lite"
        android:paddingVertical="10dp"
        app:itemIconTint="@drawable/state_selector"
        app:itemTextColor="@drawable/state_selector"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_menu"
        android:id="@+id/bottom_menu"
        />
</RelativeLayout>